# infra-did-parachain

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker-build.yml
docker/: injected.Dockerfile
docs/: 0-rust-setup.md  1-accumulator.md  2-anchor.md  3-attest.md  4-bbs_plus.md  5-blob.md  6-did.md  7-master.md  7-revoke.md  8-revoke.md  9-trusted_entity.md
node/: Cargo.toml  build.rs
node/src/: aura_or_nimbus_consensus.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_specs/: infra_did.rs  mod.rs  wisp.rs
node/src/rpc/: infra_did.rs  mod.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: weights.rs
pallets/core_mods/: Cargo.toml
pallets/core_mods/rpc/: Cargo.toml
pallets/core_mods/src/: keys_and_sigs.rs  lib.rs  test_common.rs
pallets/core_mods/src/modules/: mod.rs
pallets/core_mods/src/modules/accumulator/: mod.rs  tests.rs
pallets/core_mods/src/modules/anchor/: mod.rs  tests.rs
pallets/core_mods/src/modules/attest/: mod.rs  tests.rs
pallets/core_mods/src/modules/bbs_plus/: mod.rs  tests.rs
pallets/core_mods/src/modules/blob/: mod.rs  tests.rs
pallets/core_mods/src/modules/did/: mod.rs  tests.rs
pallets/core_mods/src/modules/master/: mod.rs  tests.rs
pallets/core_mods/src/modules/revoke/: mod.rs  tests.rs
pallets/core_mods/src/modules/trusted_entity/: actions.rs  benchmarks.rs  impl.rs  mod.rs  tests.rs  weights.rs
pallets/core_mods/src/util/: macros.rs
pallets/poa/: Cargo.toml
pallets/poa/rpc/: Cargo.toml
pallets/poa/src/: lib.rs  tests.rs
pallets/staking_rewards/: Cargo.toml
pallets/staking_rewards/rpc/: Cargo.toml
pallets/staking_rewards/src/: lib.rs  tests.rs
pallets/token_migration/: Cargo.toml
pallets/token_migration/src/: lib.rs  tests.rs
primitives/common/: Cargo.toml
primitives/common/src/: assets.rs  constants.rs  xcm.rs
primitives/session-keys/: Cargo.toml
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/infra-did/: Cargo.toml
runtime/infra-did/src/: assets_config.rs  currency.rs  lib.rs  xcm_config.rs
runtime/infra-did/src/weights/: collator_selection.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  pallet_asset_manager.rs  pallet_assets.rs  pallet_author_inherent.rs  pallet_balances.rs  pallet_collective.rs  pallet_democracy.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
runtime/infra-did/src/weights/xcm/: mod.rs  pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
runtime/src/: lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs
runtime/src/weights/xcm/: mod.rs
runtime/wisp/: Cargo.toml
runtime/wisp/src/: lib.rs
scripts/benchmarking/: run_all_benchmarks.sh
zombienet/: local-dev.toml
