[package]
name = "infra-did-parachain-bin"
version = "1.1.0"
authors = ["blockchain labs"]
build = "build.rs"
edition = "2021"
description = "Runs a infra-relay parachain node which could be a collator."

[[bin]]
name = "infra-did-parachain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.28"
hex-literal = "0.4.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Local
jsonrpsee = { version = "0.22", features = ["server"] }
parachains-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }

# parachains's runtimes
infra-did-parachain-runtime = { path = "../runtime" }

# Substrate
frame-support = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
frame-benchmarking-cli = { git = "https://github.com	/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0", default-features = false }
sp-io = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-session = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-executor = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-network = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-std = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-inherents = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-version = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-genesis-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-offchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
pallet-transaction-payment = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }

# Infra Relay
polkadot-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0", features = ["infra-relay-native",] }
polkadot-primitives = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
polkadot-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
xcm = { package = "staging-xcm", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-collator = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-consensus-proposer = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-client-parachain-inherent = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-primitives-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }

testnet-parachains-constants = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }

color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch ="feature/release-1.10.0" }


[dev-dependencies]
assert_cmd = "2.0"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime",
]
fast-runtime = [
	"infra-did-parachain-runtime/fast-runtime",
]